Update to edit in WebStorm

--- a/src/assets/localization/de.json
+++ b/src/assets/localization/de.json
@@ -3,13 +3,60 @@
   "BUTTON_CLOSE": "schliessen",
   "BUTTON_BACK": "zurück",
   "BUTTON_NEXT": "weiter",
+  "BUTTON_SHOW": "anzeigen",
   "BUTTON_FINALIZE": "abschliessen",
-  "RESULT.TITLE": "Ergebnis",
-  "RESULT.DESCRIPTION": "Hier siehst du das Ergebnis deiner Benefit Berechnung.",
-  "RESULT.SAVING.TITLE": "Summe der Einsparung",
-  "RESULT.SCORE.TITLE": "Summe der Punkte",
-  "RESULT.DETAILS.TITLE": "Details",
+  "BUTTON_UPLOAD": "Hochladen",
+  "RESULT.SUCCESS.TITLE": "Toll! Deine Idee wurde erfolgreich übermittelt",
+  "RESULT.SUCCESS.BUTTON.LEFT": "Idee einreichen",
+  "RESULT.SUCCESS.BUTTON.CENTER": "HYPE Startseite",
+  "RESULT.SUCCESS.BUTTON.RIGHT": "Idee in HYPE ansehen",
   "RESULT.BUTTON.TRANSFER": "In HYPE speichern",
+
+  "METHOD.NAME.A3":"A3",
+  "METHOD.NAME.MAKIGAMI":"Makigami",
+  "METHOD.NAME.FISHBONE":"Fischgrätendiagramm",
+  "METHOD.NAME.PROJECT":"Projekt",
+  "METHOD.NAME.HUDDLE":"Huddle",
+  "METHOD.NAME.VALUE_STREAM_MAPPING":"Wertstromanalyse",
+  "METHOD.NAME.ROOT_CAUSE_ANALYSIS":"Ursachenanalyse",
+  "METHOD.NAME.5A_5S":"5A/5S",
+  "METHOD.NAME.TSM":"Total Service Management (TSM)",
+  "METHOD.NAME.DMAIC_CYCLE":"DMAIC-Zyklus",
+  "METHOD.NAME.EDO":"EDO",
+  "METHOD.NAME.KAIZEN":"Kaizen",
+  "METHOD.NAME.PMO":"PMO",
+  "METHOD.NAME.LEAN":"Lean",
+  "METHOD.NAME.SIX_SIGMA":"Six Sigma",
+  "METHOD.DESCRIPTION.A3":"Der Ausdruck „Methode“ wird ebenso selbstverständlich wie unreflektiert gebraucht. Daraus ergibt sich ein diffuses Bedeutungsfeld, das im folgenden zunächst durch die Explikation des Methodenbegriffs strukturiert werden soll. (Unter einem Begriff verstehen wir die Bedeutung eines Ausdrucks bzw. umgangssprachlich den Sinn eines Wortes.)",
+  "METHOD.DESCRIPTION.MAKIGAMI":"Der Ausdruck „Methode“ wird ebenso selbstverständlich wie unreflektiert gebraucht.",
+  "METHOD.DESCRIPTION.FISHBONE":"Der Ausdruck „Methode“ wird ebenso selbstverständlich wie unreflektiert gebraucht.",
+  "METHOD.DESCRIPTION.PROJECT":"Der Ausdruck „Methode“ wird ebenso selbstverständlich wie unreflektiert gebraucht.",
+  "METHOD.DESCRIPTION.HUDDLE":"Der Ausdruck „Methode“ wird ebenso selbstverständlich wie unreflektiert gebraucht.",
+  "METHOD.DESCRIPTION.VALUE_STREAM_MAPPING":"Der Ausdruck „Methode“ wird ebenso selbstverständlich wie unreflektiert gebraucht.",
+  "METHOD.DESCRIPTION.ROOT_CAUSE_ANALYSIS":"Der Ausdruck „Methode“ wird ebenso selbstverständlich wie unreflektiert gebraucht.",
+  "METHOD.DESCRIPTION.5A_5S":"Der Ausdruck „Methode“ wird ebenso selbstverständlich wie unreflektiert gebraucht.",
+  "METHOD.DESCRIPTION.TSM":"Der Ausdruck „Methode“ wird ebenso selbstverständlich wie unreflektiert gebraucht.",
+  "METHOD.DESCRIPTION.DMAIC_CYCLE":"Der Ausdruck „Methode“ wird ebenso selbstverständlich wie unreflektiert gebraucht.",
+  "METHOD.DESCRIPTION.EDO":"Der Ausdruck „Methode“ wird ebenso selbstverständlich wie unreflektiert gebraucht.",
+  "METHOD.DESCRIPTION.KAIZEN":"Der Ausdruck „Methode“ wird ebenso selbstverständlich wie unreflektiert gebraucht.",
+  "METHOD.DESCRIPTION.PMO":"Der Ausdruck „Methode“ wird ebenso selbstverständlich wie unreflektiert gebraucht.",
+  "METHOD.DESCRIPTION.LEAN":"Der Ausdruck „Methode“ wird ebenso selbstverständlich wie unreflektiert gebraucht.",
+  "METHOD.DESCRIPTION.SIX_SIGMA":"Der Ausdruck „Methode“ wird ebenso selbstverständlich wie unreflektiert gebraucht.",
+
+  "TYPE_OF_WASTE.NAME.WAITING":"Warten",
+  "TYPE_OF_WASTE.NAME.MOVEMENT":"Bewegung",
+  "TYPE_OF_WASTE.NAME.CORRECTIONS":"Korrekturen",
+  "TYPE_OF_WASTE.NAME.UNUSED_TALENT":"Ungenutztes Talent",
+  "TYPE_OF_WASTE.NAME.TRANSPORTS":"Transporte",
+  "TYPE_OF_WASTE.NAME.STOCKS":"Bestände",
+  "TYPE_OF_WASTE.NAME.WORKING_METHOD":"Arbeitsmethode",
+  "TYPE_OF_WASTE.DESCRIPTION.WAITING":"In der klassischen Lean Production Lehre nach Taiichi Ohno wird zwischen insgesamt sieben Verschwendungsarten unterschieden.",
+  "TYPE_OF_WASTE.DESCRIPTION.MOVEMENT":"In der klassischen Lean Production Lehre nach Taiichi Ohno wird zwischen insgesamt sieben Verschwendungsarten unterschieden.",
+  "TYPE_OF_WASTE.DESCRIPTION.CORRECTIONS":"In der klassischen Lean Production Lehre nach Taiichi Ohno wird zwischen insgesamt sieben Verschwendungsarten unterschieden.",
+  "TYPE_OF_WASTE.DESCRIPTION.UNUSED_TALENT":"In der klassischen Lean Production Lehre nach Taiichi Ohno wird zwischen insgesamt sieben Verschwendungsarten unterschieden.",
+  "TYPE_OF_WASTE.DESCRIPTION.TRANSPORTS":"In der klassischen Lean Production Lehre nach Taiichi Ohno wird zwischen insgesamt sieben Verschwendungsarten unterschieden.",
+  "TYPE_OF_WASTE.DESCRIPTION.STOCKS":"In der klassischen Lean Production Lehre nach Taiichi Ohno wird zwischen insgesamt sieben Verschwendungsarten unterschieden.",
+  "TYPE_OF_WASTE.DESCRIPTION.WORKING_METHOD":"In der klassischen Lean Production Lehre nach Taiichi Ohno wird zwischen insgesamt sieben Verschwendungsarten unterschieden.",
 
   "AUTHOR.TITLE": "Autor/en",
   "AUTHOR.DESCRIPTION": "Hier könnte ihre Beschreibung stehen",
@@ -56,8 +103,17 @@
   "TYPES_OF_WASTE.TITLE": "Verschwendungsarten",
   "TYPES_OF_WASTE.DESCRIPTION": "Hier könnte ihre Beschreibung stehen",
 
+  "PICTURE_BEFORE.TITLE": "Bild vorher",
+  "PICTURE_BEFORE.DESCRIPTION": "Hier könnte ihre Beschreibung stehen",
+
+
+  "PICTURE_AFTER.TITLE": "Bild nacher",
+  "PICTURE_AFTER.DESCRIPTION": "Hier könnte ihre Beschreibung stehen",
+
+
+
   "CHAPTER.DESCRIPTION.HEADER": "Um mehr über die Inhalte dieses Abschnittes zu erfahren, klicke hier",
-  "DEFAULT.LOGO.PATH":"/assets/img/roche-logo.png",
+  "DEFAULT.LOGO.PATH": "/assets/img/roche-logo.png",
   "DEFAULT.CHAPTER.NAME.IDEENDATEN": "Ideendaten",
   "DEFAULT.CHAPTER.DESCRIPTION.IDEENDATEN": "In diesem Abschnitt soll deine Idee festgehalten werden. Es dreht sich alles um deren reinen Inhalt.",
   "DEFAULT.CHAPTER.NAME.WERTBESTIMMUNG": "Wertbestimmung",
@@ -74,8 +130,17 @@
   "CIP.CHAPTER.NAME.3": "Ideenbewertung",
   "CIP.CHAPTER.DESCRIPTION.3": "Das ist die Beschreibung des Kapitels 3 vom KVP",
   "CIP.CHAPTER.NAME.4": "Ideenklassifizierung",
-  "CIP.CHAPTER.DESCRIPTION.4": "Hier wird ihre Idee klassifiziert"
+  "CIP.CHAPTER.DESCRIPTION.4": "Hier wird ihre Idee klassifiziert",
 
+  "FIT4CIP.LOGO.PATH": "/assets/img/fit4cip/icon-fit4cip.png",
+  "FIT4CIP.CHAPTER.NAME.1": "FIT EINS",
+  "FIT4CIP.CHAPTER.DESCRIPTION.1": "Willkommen bei FIT4CIP die Erste",
+  "FIT4CIP.CHAPTER.NAME.2": "FIT ZWEI",
+  "FIT4CIP.CHAPTER.DESCRIPTION.2": "Willkommen bei FIT4CIP die Zweite",
+  "FIT4CIP.CHAPTER.NAME.3": "FIT DREI",
+  "FIT4CIP.CHAPTER.DESCRIPTION.3": "Willkommen bei FIT4CIP die Dritte",
+  "FIT4CIP.CHAPTER.NAME.4": "FIT VIER",
+  "FIT4CIP.CHAPTER.DESCRIPTION.4": "Willkommen bei FIT4CIP die Vierte"
 
 
 }
