--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -1,15 +1,62 @@
 {
   "APP_NAME": "HYPE One Idea Form",
   "BUTTON_CLOSE": "close",
+  "BUTTON_SHOW": "show",
   "BUTTON_BACK": "back",
   "BUTTON_NEXT": "next",
   "BUTTON_FINALIZE": "finalize",
-  "RESULT.TITLE": "result",
-  "RESULT.DESCRIPTION": "your result",
-  "RESULT.SAVING.TITLE": "sum of savings",
-  "RESULT.SCORE.TITLE": "score",
-  "RESULT.DETAILS.TITLE": "details",
-  "RESULT.BUTTON.TRANSFER": "Save in HYPE",
+  "BUTTON_UPLOAD": "Upload",
+  "RESULT.SUCCESS.TITLE": "Heureka! Your idea was successfully submitted",
+  "RESULT.SUCCESS.BUTTON.LEFT":"Submit a new idea",
+  "RESULT.SUCCESS.BUTTON.CENTER":"HYPE Homepage",
+  "RESULT.SUCCESS.BUTTON.RIGHT":"View idea in HYPE",
+  "RESULT.BUTTON.TRANSFER":"Save in HYPE",
+
+  "METHOD.NAME.A3":"A3",
+  "METHOD.NAME.MAKIGAMI":"Makigami",
+  "METHOD.NAME.FISHBONE":"Fishbone Diagram",
+  "METHOD.NAME.PROJECT":"Project",
+  "METHOD.NAME.HUDDLE":"Huddle",
+  "METHOD.NAME.VALUE_STREAM_MAPPING":"Value Stream Mapping",
+  "METHOD.NAME.ROOT_CAUSE_ANALYSIS":"Root-Cause Analysis",
+  "METHOD.NAME.5A_5S":"5A/5S",
+  "METHOD.NAME.TSM":"Total Service Management (TSM)",
+  "METHOD.NAME.DMAIC_CYCLE":"DMAIC-Cycle",
+  "METHOD.NAME.EDO":"EDO",
+  "METHOD.NAME.KAIZEN":"Kaizen",
+  "METHOD.NAME.PMO":"PMO",
+  "METHOD.NAME.LEAN":"Lean",
+  "METHOD.NAME.SIX_SIGMA":"Six Sigma",
+  "METHOD.DESCRIPTION.A3":"a manner or mode of procedure, especially an orderly, logical, or systematic way of instruction, inquiry, investigation, experiment, presentation, etc.:",
+  "METHOD.DESCRIPTION.MAKIGAMI":"a manner or mode of procedure, especially an orderly, logical, or systematic way of instruction, inquiry, investigation, experiment, presentation, etc.:",
+  "METHOD.DESCRIPTION.FISHBONE":"a manner or mode of procedure, especially an orderly, logical, or systematic way of instruction, inquiry, investigation, experiment, presentation, etc.:",
+  "METHOD.DESCRIPTION.PROJECT":"a manner or mode of procedure, especially an orderly, logical, or systematic way of instruction, inquiry, investigation, experiment, presentation, etc.:",
+  "METHOD.DESCRIPTION.HUDDLE":"a manner or mode of procedure, especially an orderly, logical, or systematic way of instruction, inquiry, investigation, experiment, presentation, etc.:",
+  "METHOD.DESCRIPTION.VALUE_STREAM_MAPPING":"a manner or mode of procedure, especially an orderly, logical, or systematic way of instruction, inquiry, investigation, experiment, presentation, etc.:",
+  "METHOD.DESCRIPTION.ROOT_CAUSE_ANALYSIS":"a manner or mode of procedure, especially an orderly, logical, or systematic way of instruction, inquiry, investigation, experiment, presentation, etc.:",
+  "METHOD.DESCRIPTION.5A_5S":"a manner or mode of procedure, especially an orderly, logical, or systematic way of instruction, inquiry, investigation, experiment, presentation, etc.:",
+  "METHOD.DESCRIPTION.TSM":"a manner or mode of procedure, especially an orderly, logical, or systematic way of instruction, inquiry, investigation, experiment, presentation, etc.:",
+  "METHOD.DESCRIPTION.DMAIC_CYCLE":"a manner or mode of procedure, especially an orderly, logical, or systematic way of instruction, inquiry, investigation, experiment, presentation, etc.:",
+  "METHOD.DESCRIPTION.EDO":"a manner or mode of procedure, especially an orderly, logical, or systematic way of instruction, inquiry, investigation, experiment, presentation, etc.:",
+  "METHOD.DESCRIPTION.KAIZEN":"a manner or mode of procedure, especially an orderly, logical, or systematic way of instruction, inquiry, investigation, experiment, presentation, etc.:",
+  "METHOD.DESCRIPTION.PMO":"a manner or mode of procedure, especially an orderly, logical, or systematic way of instruction, inquiry, investigation, experiment, presentation, etc.:",
+  "METHOD.DESCRIPTION.LEAN":"a manner or mode of procedure, especially an orderly, logical, or systematic way of instruction, inquiry, investigation, experiment, presentation, etc.:",
+  "METHOD.DESCRIPTION.SIX_SIGMA":"a manner or mode of procedure, especially an orderly, logical, or systematic way of instruction, inquiry, investigation, experiment, presentation, etc.:",
+
+  "TYPE_OF_WASTE.NAME.WAITING":"Waiting",
+  "TYPE_OF_WASTE.NAME.MOVEMENT":"Movement",
+  "TYPE_OF_WASTE.NAME.CORRECTIONS":"Corrections",
+  "TYPE_OF_WASTE.NAME.UNUSED_TALENT":"Unused Talent",
+  "TYPE_OF_WASTE.NAME.TRANSPORTS":"Transports",
+  "TYPE_OF_WASTE.NAME.STOCKS":"Inventory",
+  "TYPE_OF_WASTE.NAME.WORKING_METHOD":"Working Methods",
+  "TYPE_OF_WASTE.DESCRIPTION.WAITING":"Liquid waste is commonly found both in households as well as in industries. This waste includes dirty water, organic liquids, wash water, waste detergents and even rainwater.",
+  "TYPE_OF_WASTE.DESCRIPTION.MOVEMENT":"Liquid waste is commonly found both in households as well as in industries. This waste includes dirty water, organic liquids, wash water, waste detergents and even rainwater.",
+  "TYPE_OF_WASTE.DESCRIPTION.CORRECTIONS":"Liquid waste is commonly found both in households as well as in industries. This waste includes dirty water, organic liquids, wash water, waste detergents and even rainwater.",
+  "TYPE_OF_WASTE.DESCRIPTION.UNUSED_TALENT":"Liquid waste is commonly found both in households as well as in industries. This waste includes dirty water, organic liquids, wash water, waste detergents and even rainwater.",
+  "TYPE_OF_WASTE.DESCRIPTION.TRANSPORTS":"Liquid waste is commonly found both in households as well as in industries. This waste includes dirty water, organic liquids, wash water, waste detergents and even rainwater.",
+  "TYPE_OF_WASTE.DESCRIPTION.STOCKS":"Liquid waste is commonly found both in households as well as in industries. This waste includes dirty water, organic liquids, wash water, waste detergents and even rainwater.",
+  "TYPE_OF_WASTE.DESCRIPTION.WORKING_METHOD":"Liquid waste is commonly found both in households as well as in industries. This waste includes dirty water, organic liquids, wash water, waste detergents and even rainwater.",
 
   "AUTHOR.TITLE": "Author/s",
   "AUTHOR.DESCRIPTION": "This could be your description",
@@ -55,6 +102,14 @@
 
   "TYPES_OF_WASTE.TITLE": "Types of waste",
   "TYPES_OF_WASTE.DESCRIPTION": "This could be your description",
+
+  "PICTURE_BEFORE.TITLE": "Picture before",
+  "PICTURE_BEFORE.DESCRIPTION": "This could be your description",
+
+
+  "PICTURE_AFTER.TITLE": "Picture after",
+  "PICTURE_AFTER.DESCRIPTION": "This could be your description",
+
 
   "CHAPTER.DESCRIPTION.HEADER": "Click, to get more information about this chapter",
 
