--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -11,6 +11,9 @@
   "RESULT.SUCCESS.BUTTON.CENTER":"HYPE Homepage",
   "RESULT.SUCCESS.BUTTON.RIGHT":"View idea in HYPE",
   "RESULT.BUTTON.TRANSFER":"Save in HYPE",
+  "HEADER.MENU_ITEM.PATCHNOTES": "v0.1 release notes",
+  "HEADER.MENU_ITEM.HOME": "Home",
+  "HEADER.MENU_ITEM.FEEDBACK": "Feedback Form",
 
   "METHOD.NAME.A3":"A3",
   "METHOD.NAME.MAKIGAMI":"Makigami",
